[metadata]
name = cameracalibration-pvphan
version = 0.0.1
author = Paul Vinh Phan
author_email = pvphan90@gmail.com
description = A simple camera calibration library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pvphan/camera-calibration
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
